--- a/style.css
+++ b/style.css
@@ -76,7 +76,10 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
     padding: 10px;
-    margin: auto;
+    margin-left: 82.5vh;
+    transition: 0.6s;  	
+    transform-style: preserve-3d;    	
+    position: relative;  
 }
 .card:hover{
     transition: 1s;
@@ -94,9 +97,46 @@ body{
     justify-content: center;
     gap: 30px;
 }
+.tipos-tras{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap :30px;
+    
+}
+
 .tipo{
     width: 20rem;
     border-radius: 20px;
     padding: 6px;
     line-height: 21px;
 }
+/* ################## VIRAR CARD ##################*/
+.card-container{
+    perspective: 1000;
+}
+.card-container:active .card, .card-container.active .card {  		
+    transform: rotateY(180deg);  	
+
+}
+
+.frente, .tras {  	
+    
+    backface-visibility: hidden;    	
+    text-align: center;
+    padding: 10px;
+    margin: auto;
+    top: 0;  	
+    left: 0;  
+    position: absolute;
+}  
+.frente ,.tras ,.card-container{
+    width: 40vh;
+    height: 40vh;
+}  
+.tras {
+     z-index: 2; 
+ }    
+.tras { 
+    transform: rotateY(180deg);
+ }
