--- a/pokedex.css
+++ b/pokedex.css
@@ -40,6 +40,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .lado-esquerdo #nome-pokemon{
+    text-align: center;
     width: 200px;
     margin: 30px;
     color: white;
