Front do search pokemons

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     text-align: center;
     align-items: center;
     padding: 10px;
-    background-image: linear-gradient(rgba(163, 229, 244, 0.674), rgba(123, 168, 237, 0.852))
+    background-image: linear-gradient(rgba(163, 229, 244, 0.674), rgba(123, 168, 237, 0.852));
     
 }
 
