--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     background-repeat: no-repeat;
     width: 100%;/*modifiqued*/
     background-position: center;
-    height: 100%;
+    height: 100vh;
 }
 /* header{
     display: flex;
@@ -92,7 +92,7 @@ body{
     outline: none;
 }
 
-.card-poke{
+.card-poke , .pesquisados{
     box-sizing: content-box;
     width: 25vw;
     height: 33vh;
@@ -202,7 +202,6 @@ body{
 }
 .barra-navegacao{
     margin: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -219,14 +218,12 @@ a .botao-navegacao {
     
 }
 .botao-navegacao{
-    
     text-align: center;
     justify-content: center;
     align-items: center;
     vertical-align: middle;
     padding: 4px 0;
     width: 40px;
-    height: 40px;
     border-radius: 20px;
     border: none;
     text-decoration: none;
@@ -241,4 +238,28 @@ a .botao-navegacao {
     /* margin: 0 0 5px 5px; */
     padding: 10px;
 
+}
+.pesquisados{
+    margin: 5rem auto;
+    width: 25vw;
+    height: 33vh;
+}
+.visualizando-pokemon{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    gap: 30px;
+}
+
+.btn-ver-evolucao{
+
+}
+.visualizando-pokemon a{
+    text-decoration: none;
+}
+.voltar a{
+    color: white;
 }
