--- a/style.css
+++ b/style.css
@@ -33,10 +33,14 @@
 
 body{
     background-image: linear-gradient(rgba(157, 212, 224, 0.674), rgba(161, 236, 205, 0.852));
-    background-repeat: no-repeat;
-    width: 100%;/*modifiqued*/
+    background-repeat: no-repeat;/*modifiqued*/
     background-position: center;
+    background-size: cover;
+    width: 100%;
     height: 100vh;
+}
+.altura-body{
+    height: 100%;
 }
 /* header{
     display: flex;
@@ -46,7 +50,7 @@ body{
     padding: 10px;
 } */
 
-.titulo, .tipo-filtro-listar{
+.titulo{
     align-items: center;
     justify-content: center;
     display: flex;
@@ -59,6 +63,16 @@ body{
     text-align: center;
     color: #530000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.tipo-filtro-listar{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    color:#530000;
+    margin: 0 auto;
+    font-weight: 800;
+    font-size: 30px;
 }
 #pesquisa{
     text-align: center;
@@ -131,6 +145,7 @@ body{
     text-align: right;
     display: flex;
     justify-content: flex-end;
+    align-items: bottom;
     margin-top: 15px;    
 }
 
@@ -212,31 +227,37 @@ body{
     
 }
 a .botao-navegacao {
-    width: 20px;
+    text-align: center;
+    width: 10px;
     color: white;
     
     
 }
 .botao-navegacao{
-    text-align: center;
+    height: 60px;
     justify-content: center;
     align-items: center;
-    vertical-align: middle;
-    padding: 4px 0;
-    width: 40px;
-    border-radius: 20px;
-    border: none;
+    border: #D9D9D9 1px;
+    padding: 10px;
+    border-radius: 29px;
     text-decoration: none;
-    background-color:#E02222;
+    background-color: #E02222;
     color: white;
+    text-align: center;
+    display: flex;
+    width: 60px;
 }
+
 
 .botao-home{
     display: flex;
+    margin: 0;
+    justify-content: flex-end;/*
+    
     width: 98vw;
     justify-content: flex-end;
-    /* margin: 0 0 5px 5px; */
-    padding: 10px;
+    /* margin: 0 0 5px 5px; 
+    padding: 10px; */
 
 }
 .pesquisados{
@@ -246,20 +267,36 @@ a .botao-navegacao {
 }
 .visualizando-pokemon{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: auto;
     gap: 30px;
 }
 
-.btn-ver-evolucao{
 
-}
+
 .visualizando-pokemon a{
     text-decoration: none;
 }
 .voltar a{
     color: white;
+}
+.filtro-listar-todos{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 30px;
+}
+.filtro-listar-todos select{
+    width: 150px;
+    height: 40px;
+    border-radius: 5px;
+}
+.filtro-listar-todos button{
+    width: 150px;
+    height: 40px;
 }
