--- a/style.css
+++ b/style.css
@@ -39,18 +39,10 @@ body{
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
-}
-.altura-body{
+    min-height: 100vh;
     height: 100%;
 }
-/* header{
-    display: flex;
-    width: 98vw;
-    justify-content: flex-end;
-    /* margin: 0 0 5px 5px; /
-    padding: 10px;
-} */
+
 
 .titulo{
     align-items: center;
@@ -117,7 +109,7 @@ body{
     text-align: center;
     align-items: center;
     padding: 10px;
-    background-image: linear-gradient(rgba(163, 229, 244, 0.674), rgba(123, 168, 237, 0.852));
+    background-image: linear-gradient(rgba(163, 229, 244, 0.674), rgba(123, 168, 237, 0.852)); 
     
 }
 .card-poke:hover{
@@ -321,4 +313,18 @@ a .botao-navegacao {
 .no_found_pokemon h2{
     margin-top: 30px;
     font-family: 'Dosis', sans-serif;
+}
+
+.pesquisados img{
+    animation: Rotate 3s infinite;
+}
+
+@keyframes Rotate {
+	20% {
+        rotate: 0deg;
+	}
+	100% {
+        rotate : 360deg;
+	}
+	
 }
