--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
 }
 .tipos{
     background-color: rgba(163, 229, 244, 0.674);
-    width: 150px;
+    width: 10rem;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
