--- a/pokedex.css
+++ b/pokedex.css
@@ -36,7 +36,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.lado-direito img{
+.lado-direito .foto-poke{
     width: 150px;
     height: 150px;
     margin: 0 40px 40px 40px;
